Fixed scroll block on mobile devices. Improved content element styles

--- a/styles.css
+++ b/styles.css
@@ -80,28 +80,47 @@ a, ol, ul, li, p, pre {
 
 ol, ul {
   padding-left: var(--list-indent-width);
-  margin-bottom: var(--line-height);
 }
 
-a, p, pre, textarea, button {
+p, pre, textarea, button, ol, ul, table {
+  margin-top: var(--line-height);
   color: var(--color-light-text);
+}
+
+table {
+  border-spacing: 0;
+}
+
+td, th {
+  line-height: var(--line-height);
+  margin: 0;
+  padding: 0 var(--spacing);
+  text-align: left;
+}
+
+th {
+  text-transform: uppercase;
+  color: var(--color-default-text);
+  background-color: var(--color-secondary);
+}
+
+tr.even {
+  background-color: var(--color-background-light);
+}
+
+#content:first-child {
+  margin-top: 0;
 }
 
 em {
   color: var(--color-default-text);
 }
 
-/* p { */
-/*   display: flex; */
-/*   flex-direction: row; */
-/* } */
-
 a {
   font-size: var(--font-size);
   font-weight: bold;
   height: var(--line-height);
   display: inline-block;
-  margin-right: calc(var(--line-height)/2);
   color: var(--color-primary);
 }
 
@@ -121,6 +140,10 @@ h1, h2, h3, h4, h5 {
 h1 {
   line-height: calc(var(--line-height)*2);
   font-size: var(--line-height);
+}
+
+h1 + * {
+  margin-top: 0;
 }
 
 h1::before, h2::before, h3::before, h4::before, h5::before,
@@ -203,7 +226,8 @@ img + img {
 }
 
 blockquote {
-  margin: var(--line-height) 0;
+  margin: 0;
+  margin-top: var(--line-height);
   font-style: italic;
   font-weight: bold;
   display: inline-flex;
@@ -234,6 +258,7 @@ code > pre {
   align-items: center;
   height: var(--bar-height);
   font-size: var(--font-size);
+  margin: 0;
 }
 
 .tab > span:first-of-type {
@@ -351,7 +376,13 @@ input {
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin: var(--line-height) 0;
+  margin-top: var(--line-height);
+  flex-wrap: wrap;
+  row-gap: var(--line-height);
+}
+
+.row > a {
+  margin-right: calc(var(--line-height)/2);
 }
 
 .align-right {
@@ -376,9 +407,14 @@ input {
   color: var(--color-secondary);
 }
 
+pre[data-type="@ascii"] {
+  margin-top: 0;
+}
+
 pre[data-type="@ascii"] > pre {
   color: var(--color-primary);
   display: inline-flex; /* Keep the width the same as the width of the text */
+  margin-top: 0;
 }
 
 pre[data-type="@ascii"] > h1 {
@@ -386,7 +422,7 @@ pre[data-type="@ascii"] > h1 {
 }
 
 @media
-only screen and (max-width: 750px),
+only screen and (max-width: 780px),
 only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
 only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
 only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
@@ -425,6 +461,12 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
 
   #content {
     padding: 0 var(--spacing);
+  }
+
+  blockquote::before {
+    content: '';
+    min-width: 0;
+    border-left: 2px solid var(--color-secondary-text);
   }
 
   img, video {
@@ -476,6 +518,11 @@ only screen and (                min-resolution: 2dppx)  and (max-width: 700px) 
     padding: 0 var(--spacing-sm);
   }
 
+  h1 {
+    text-align: center;
+    width: 100%;
+  }
+
   #gutter {
     display: none;
   }
@@ -497,7 +544,7 @@ only screen and (                min-resolution: 2dppx)  and (max-width: 700px) 
   }
 
   pre[data-type="@ascii"] > h1 {
-    display: flex;
+    display: block;
   }
 }
 
